--- a/app/views/publish/courses/_basic_details_tab.html.erb
+++ b/app/views/publish/courses/_basic_details_tab.html.erb
@@ -139,7 +139,12 @@
 
       <% summary_list.row(html_attributes: { data: { qa: "course__start_date" } }) do |row| %>
         <% row.key { "Course starts" } %>
-        <% row.value { l(course.start_date&.to_date, format: :short) } %>
+        <% row.value do %>
+          <ul class="govuk-list">
+            <li><%= l(course.start_date&.to_date, format: :short) %></li>
+            <li>Academic year <%= course.cycle_range %></li>
+          </ul>
+        <% end %>
         <% if @course.edit_course_options[:show_start_date] %>
           <% row.action({
             # href: start_date_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
