--- a/app/views/cookie_preferences/show.html.erb
+++ b/app/views/cookie_preferences/show.html.erb
@@ -10,13 +10,11 @@
 
       <p class="govuk-body">Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
 
-      <p class="govuk-body">We use cookies to make ‘<%= t("service_name") %> (Publish)’ work and collect information about how you use our service.</p>
+      <p class="govuk-body">We use cookies to make <%= t("service_name") %> (Publish) work and collect information about how you use our service.</p>
 
       <h2 class="govuk-heading-m">Essential cookies</h3>
 
       <p class="govuk-body">Essential cookies keep your information secure while you use Publish.</p>
-
-      <p class="govuk-body">We do not need to ask permission to use them.</p>
 
       <table class="govuk-table app-table--vertical-align-middle" aria-describedby="essential_cookies_desc">
         <thead class="govuk-table__header">
@@ -40,7 +38,7 @@
         </tbody>
       </table>
 
-      <h2 class="govuk-heading-m">Analytics cookies (optional)</h2>
+      <h2 class="govuk-heading-m">Measuring website usage (Google Analytics)</h2>
 
       <p class="govuk-body">With your permission, we use Google Analytics to collect data about how you use Publish. This information helps us improve our service.</p>
 
