[0272] Amended course summary examples

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,3 +33,19 @@ body:not(.js-enabled) .app-js-only {
 .js-enabled .app-no-js-only {
   display: none;
 }
+
+.app-list--dash {
+  padding-left: govuk-spacing(3);
+
+  li {
+    position: relative;
+
+    &:before {
+      color: govuk-colour("dark-grey");
+      content: "\2013";
+      left: -16px;
+      position: absolute;
+      top: 0;
+    }
+  }
+}
