--- a/app/views/pages/course_summary_examples.erb
+++ b/app/views/pages/course_summary_examples.erb
@@ -2,32 +2,133 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
     <h1 class="govuk-heading-l">
       <span class="govuk-caption-l">How to use this service</span>
       Course summary examples
     </h1>
-    <p class="govuk-body">Based on our research into how candidates read course content, we know that candidates prefer shorter content that's easy to read and scan. We’ve reduced the maximum word limit for the ‘Course summary’ (previously ‘About this course’) from 400 words to 200 words.</p>
-    <p class="govuk-body">Here are some ‘Course summary’ examples showing how you can keep descriptions short, well-formatted and focused.</p>
 
-    <h2 class="govuk-heading-m">Biology</h2>
-    <p class="govuk-body">You’ll spend the first 2 weeks of your training at the Becoming a Teacher (BAT) studio in Sheffield city centre. Here, you’ll meet other new trainees and learn about the principles of great teaching and behaviour management.</p>
-    <p class="govuk-body">You’ll then begin the first of your 2 school placements, where you’ll be matched with an experienced biology teacher (your ‘subject tutor’). They’ll support you to develop your own teaching practice and gain confidence leading a class.</p>
-    <p class="govuk-body">Each of your school placements lasts approximately 4 months, with breaks during school holidays. You’ll spend 4 days of the week observing, delivering, and preparing for lessons with the help of your subject tutor and mentor. The 5th day of the week is dedicated to theoretical learning, such as writing the 2 essays which are an essential part of getting your PGCE.</p>
-    <p class="govuk-body">By the end of your training you’ll be ready to be assessed against the teaching standards, so that you can get qualified teacher status (QTS). You’ll have an interview, share a portfolio of work, and be observed teaching. Your mentor will work with you throughout the year to ensure you’re ready for this.</p>
-    <p class="govuk-body">(189 words)</p>
-
-    <h2 class="govuk-heading-m">Art and Design</h2>
-    <p class="govuk-body">This varied and inclusive art and design course is offered in collaboration with the University of Becoming a Teacher (BAT). The course is taught by experienced staff who were successful teachers and maintain strong links with schools.</p>
-    <p class="govuk-body">During the course, you’ll develop your subject knowledge and pedagogy to give you the skills needed to become a confident teacher.</p>
-    <p class="govuk-body">You’ll spend 1 day per week in university-led lectures and 4 days per week in school-led sessions. This will help you to develop your confidence in:</p>
-    <ul class="govuk-list govuk-list--bullet">
-        <li>classroom and behaviour management</li>
-        <li>meeting individual needs and inclusion</li>
-        <li>planning and assessment</li>
+    <h2 class="govuk-heading-s">Contents</h2>
+    <ul class="govuk-list app-list--dash govuk-!-margin-bottom-8">
+      <li>
+        <%= govuk_link_to "Example 1 - secondary art and design course provided by a university", "#example-1" %>
+      </li>
+      <li>
+        <%= govuk_link_to "Example 2 - primary course provided by a SCITT", "#example-2" %>
+      </li>
     </ul>
-    <p class="govuk-body">At the end of the course, the e-portfolio you’ll have comprised throughout the year provides evidence that you have met the Teachers’ Standards for the award of Qualified Teacher Status (QTS). Our aim is that you’ll have the skills, experience and resilience needed to become a confident teacher.</p>
-    <p class="govuk-body">(144 words)</p>
-    <p class="govuk-body"><%= govuk_link_to "View more guidance on writing course summary descriptions", writing_descriptions_for_publish_teacher_training_courses_path %></p>
+
+    <p class="govuk-body">
+      Based on our research into how candidates read course descriptions and our <%= govuk_link_to "guidance on writing descriptions for Publish", writing_descriptions_for_publish_teacher_training_courses_path %>, here are some ‘Course summary’ examples.
+    </p>
+    <p class="govuk-body">
+      The examples are based on real descriptions that are currently live on Find postgraduate teacher training.
+    </p>
+
+    <h2 id="example-1" class="govuk-heading-m">
+      Example 1 - secondary art and design course provided by a university
+    </h2>
+
+    <p class="govuk-body">
+      In this example, the language used is clear and inspirational. It gives the candidates a good overview of what they can expect, without going into too much detail (as this can be added in other sections).
+    </p>
+    <p class="govuk-body">
+      It’s well structured so the content is easy to read and scan.
+    </p>
+
+    <h3 class="govuk-heading-s">Art and design (235 words)</h3>
+    <p class="govuk-body">
+      This Art and Design course was developed with our partner schools and features an ambitious curriculum.
+    </p>
+
+    <p class="govuk-body">It covers:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>professional behaviours and responsibilities</li>
+      <li>subject knowledge and the national curriculum</li>
+      <li>how pupils learn</li>
+      <li>lesson planning</li>
+      <li>managing behaviour </li>
+      <li>adapting your teaching to respond to different pupil needs</li>
+      <li>pupil assessment</li>
+      <li>pupil wellbeing</li>
+    </ul>
+
+    <p class="govuk-body">By the end of the course you’ll be equipped to:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>share your love for art and design, inspiring your students’ creativity</li>
+      <li>develop innovative teaching approaches, designing and implementing stimulating resources</li>
+      <li>teach art and design within the national curriculum framework, meeting exam requirements </li>
+    </ul>
+
+    <p class="govuk-body">
+      Studio based activities are a key feature of this course. In our specialist art studio you’ll learn to teach 2 dimensional work, sculptural techniques, ceramics, puppetry, print-making, textiles, photography and multimedia.
+    </p>
+
+    <p class="govuk-body">You’ll learn in different ways throughout this course, for example, through:</p>
+
+    <ul class="govuk-list govuk-list--bullet">
+      <li>practical experience in the classroom</li>
+      <li>working with practising teachers, who you’ll meet ahead of your placements</li>
+      <li>independent study</li>
+    </ul>
+
+    <p class="govuk-body">
+      To enrich your professional practice and develop your subject expertise, you’ll complete 2 assignments. These are an essential part of getting your PGCE, and contribute 60 credits towards a master’s degree.
+    </p>
+
+    <p class="govuk-body">
+      You’ll also build a portfolio of the educational outcomes you achieved during the course. This is a great way of showcasing your work at future interviews.
+    </p>
+
+    <p class="govuk-body">
+      Train with us and you’ll be part of a thriving creative network, with access to world class facilities and beautiful grounds at the Becoming a Teacher (BAT) university.
+    </p>
+
+    <h2 id="example-2" class="govuk-heading-m">
+      Example 2 - primary course provided by a SCITT
+    </h2>
+
+    <p class="govuk-body">
+      In this example, the provider focuses on how the candidate will be supported throughout their course through a school mentor and regular feedback.
+    </p>
+    <p class="govuk-body">
+      Again, the content is well-structured and provides a clear overview of how and where the candidate will spend their time.
+    </p>
+
+    <h3 class="govuk-heading-s">Primary (264 words)</h3>
+
+    <p class="govuk-body">
+      The Becoming a Teacher (BAT) primary course leads to Qualified Teacher Status (QTS) and a Post-Graduate Certificate in Education (PGCE). You will train across the 5-11 age range, where you will learn from experienced practitioners, particularly your personal mentor.
+    </p>
+
+    <p class="govuk-body">
+      You’ll spend four days per week on placement in our partnership schools. In addition, you will join the rest of your cohort one day per week for training with the BAT SCITT.
+    </p>
+
+    <p class="govuk-body">Our curriculum has six areas:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>Pedagogy and how children learn</li>
+      <li>Behaviour management and setting high expectations</li>
+      <li>Adaptive teaching</li>
+      <li>Assessment of pupils</li>
+      <li>Professional behaviour, statutory responsibilities and wellbeing</li>
+      <li>Subject knowledge and curriculum</li>
+    </ul>
+
+
+    <p class="govuk-body">
+      You’ll receive regular formative feedback through observations, weekly mentor meetings, visits from BAT staff, and informal conversations with colleagues at your school.
+    </p>
+    <p class="govuk-body">
+      By demonstrating that you have been satisfactory progress in the six curriculum areas, we will be able to award you QTS at the end of the course. As a result, 100% of our graduates have secured teaching positions upon completing the course.
+    </p>
+    <p class="govuk-body">
+      Your school mentor will support you daily, and the mentors are supported in school by a nominated professional tutor. In addition, BAT staff will provide pastoral, academic and professional support. Ofsted described our training as ‘exemplary’.
+    </p>
+    <p class="govuk-body">
+      The PGCE is an academic qualification assessed through a group presentation and two written assignments exploring the topics of special educational needs and disabilities (SEND), behaviour management and assessment, and marking and feedback.
+    </p>
+    <p class="govuk-body">
+      Projects are spaced throughout the course with regular training sessions to develop your written and research skills, collaborate with others, and build your understanding of these key teaching areas.
+    </p>
   </div>
 </div>
