--- a/app/views/publish/courses/details.html.erb
+++ b/app/views/publish/courses/details.html.erb
@@ -2,9 +2,10 @@
 <%= content_for :before_content, render_breadcrumbs(:course) %>
 
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l"><%= course.description %></span>
-  <%= course.name %> (<%= course.course_code %>)
+  <%= course.name %> (<%= course.course_code %>) <span data-qa=“course__content-status”><%= course.status_tag %></span>
 </h1>
+
+<%= render partial: "course_button_panel" %>
 
 <div class="govuk-tabs app-tabs app-tabs--course">
   <h2 class="govuk-tabs__title">Contents</h2>
