--- a/app/views/publish/courses/show.html.erb
+++ b/app/views/publish/courses/show.html.erb
@@ -26,9 +26,11 @@
   </div>
 <% end %>
 
-<h1 class="govuk-heading-l" >
+<h1 class="govuk-heading-l">
   <%= course.name_and_code %> <span data-qa=“course__content-status”><%= course.status_tag %></span>
 </h1>
+
+<%= render partial: "course_button_panel" %>
 
 <div class="govuk-tabs app-tabs app-tabs--course">
   <h2 class="govuk-tabs__title">Contents</h2>
