[273] Update to course summary

--- a/app/views/publish/courses/preview.html.erb
+++ b/app/views/publish/courses/preview.html.erb
@@ -56,7 +56,7 @@
   <div class="govuk-grid-column-two-thirds">
     <h2 class="govuk-heading-m">Contents</h2>
     <ul class="govuk-list app-list--dash govuk-!-margin-bottom-8">
-      <li><%= govuk_link_to "About the course", "#section-about" %></li>
+      <li><%= govuk_link_to "Course summary", "#section-about" %></li>
       <li><%= govuk_link_to course.placements_heading, "#section-schools" %></li>
       <li><%= govuk_link_to "Entry requirements", "#section-entry" %></li>
       <li><%= govuk_link_to "About the training provider", "#section-about-provider" %></li>
