--- a/app/views/publish/courses/preview/_about_course.html.erb
+++ b/app/views/publish/courses/preview/_about_course.html.erb
@@ -1,5 +1,5 @@
 <div class="govuk-!-margin-bottom-8">
-  <h2 class="govuk-heading-l" id="section-about">About the course</h2>
+  <h2 class="govuk-heading-l" id="section-about">Course summary</h2>
   <div data-qa="course__about_course">
     <% if course.about_course.present? %>
       <%= markdown(course.about_course) %>
