--- a/app/views/publish/courses/details.html.erb
+++ b/app/views/publish/courses/details.html.erb
@@ -1,8 +1,8 @@
 <% content_for :page_title, "#{course.name_and_code} - Courses" %>
 <%= content_for :before_content, render_breadcrumbs(:course) %>
 
-<h1 class="govuk-heading-l">
-  <%= course.name %> (<%= course.course_code %>) <span data-qa=“course__content-status”><%= course.status_tag %></span>
+<h1 class="govuk-heading-l <%= "govuk-!-margin-bottom-2" if (course.is_published? && course.is_running?) || course.is_withdrawn? %>">
+  <%= course.name_and_code %> <span data-qa=“course__content-status”><%= course.status_tag %></span>
 </h1>
 
 <%= render partial: "course_button_panel" %>
