add rollover button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,6 +81,7 @@
           <%= yield %>
         </div>
       </main>
+      <%= debug params %>
     </div>
     <%= render partial: "layouts/footer" %>
     <%= yield(:before_body_close) %>
