Align govuk-button within button groups

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,3 +49,8 @@ body:not(.js-enabled) .app-js-only {
     }
   }
 }
+
+// This ensures govuk-button-to form wrapper is aligned within button groups properly
+.govuk-button-group {
+  form { display: contents; }
+}
