--- a/app/views/publish/courses/draft_rollover/edit.html.erb
+++ b/app/views/publish/courses/draft_rollover/edit.html.erb
@@ -26,7 +26,7 @@
         Are you sure you want to roll over the course into the next recruitement cycle?
       </h1>
 
-      <%= f.govuk_submit "Roll over course", class: "govuk-button" %>
+      <%= f.govuk_submit "Roll over course", class: "govuk-button", data: { qa: "course__rollover-course"} %>
     <% end %>
 
     <p class="govuk-body govuk-!-margin-top-5">
