--- a/app/views/publish/courses/course_button_panel/_unpublished.html.erb
+++ b/app/views/publish/courses/course_button_panel/_unpublished.html.erb
@@ -2,9 +2,11 @@
                     class: "govuk-!-margin-right-2",
                     data: { qa: "course__publish" }) %>
 
-<%= govuk_button_to("Roll over course", rollover_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
+<% if course.content_status == :draft && !course.rolled_over? %>
+  <%= govuk_button_to("Roll over course", rollover_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
                     class: " govuk-button--secondary govuk-!-margin-right-2",
                     data: { qa: "course__rollover" },
                     method: :get) %>
+<% end %>
 
 <%= govuk_link_to "Delete course", delete_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), class: "app-link--destructive", data: { qa: "course__delete-link" } %>
