--- a/app/views/publish/courses/show.html.erb
+++ b/app/views/publish/courses/show.html.erb
@@ -31,6 +31,7 @@
 </h1>
 
 <%= render partial: "course_button_panel" %>
+<%= render partial: "rolled_over_link" %>
 
 <div class="govuk-tabs app-tabs app-tabs--course">
   <h2 class="govuk-tabs__title">Contents</h2>
