--- a/app/views/publish/courses/_rolled_over_link.html.erb
+++ b/app/views/publish/courses/_rolled_over_link.html.erb
@@ -6,7 +6,7 @@
             @course.recruitment_cycle_year.next,
             @course.course_code,
           ),
-          { class: "govuk-link--no-visited-state", data: { qa: "rolled-over-link" } }
+          { class: "govuk-link--no-visited-state", data: { qa: "course__rolled-over-link" } }
         %>
     </p>
   </div>
