--- a/app/views/publish/courses/draft_rollover/edit.html.erb
+++ b/app/views/publish/courses/draft_rollover/edit.html.erb
@@ -34,7 +34,7 @@
         "Cancel",
         publish_provider_recruitment_cycle_course_path(@provider.provider_code, @course.recruitment_cycle_year, @course.course_code),
         method: :get,
-        no_visited_state: true
+        no_visited_state: true,
       ) %>
     </p>
   </div>
