Align users with providers in en.yml

--- a/app/views/support/providers/users/show.html.erb
+++ b/app/views/support/providers/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= render PageTitle::View.new(title: "support.providers.users.show") %>
+<%= render PageTitle::View.new(title: "support.providers.users.check") %>
 
 <%= content_for(:breadcrumbs) do %>
   <%= render GovukComponent::BackLinkComponent.new(
