--- a/app/views/support/providers/users/new.html.erb
+++ b/app/views/support/providers/users/new.html.erb
@@ -1,23 +1,22 @@
-<%= render PageTitle::View.new(title: "support.users.new") %>
+<%= render PageTitle::View.new(title: t("support.providers.users.new")) %>
 <% content_for :before_content do %>
   <%= govuk_back_link_to(users_support_provider_path(params[:provider_id])) %>
 <% end %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <%= form_with model: [:support, :provider, @user], local: true do |f| %>
+      <%= form_with(model: @user_form, url: support_provider_users_path, local: true) do |f| %>
 
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <span class="govuk-caption-l"><%= "#{@provider.provider_name} (#{@provider.provider_code})"%></span>
-          <h1 class="govuk-fieldset__heading"><%= t("components.page_titles.support.users.new") %></h1>
+          <h1 class="govuk-fieldset__heading"><%= t("support.providers.users.new") %></h1>
         </legend>
 
-        <%= f.govuk_error_summary %>
 
-        <%= f.govuk_text_field :first_name, label: { text: "First name", size: "s" }, width: 20 %>
-        <%= f.govuk_text_field :last_name, label: { text: "Last name", size: "s" }, width: 20 %>
-        <%= f.govuk_text_field :email, label: { text: "Email address", size: "s" } %>
+        <%= f.govuk_text_field :first_name, label: { text: t("support.providers.users.first_name"), size: "s" }, width: 20 %>
+        <%= f.govuk_text_field :last_name, label: { text: t("support.providers.users.last_name"), size: "s" }, width: 20 %>
+        <%= f.govuk_text_field :email, label: { text: t("support.providers.users.email"), size: "s" } %>
 
         <%= f.govuk_submit %>
       </fieldset>
