--- a/app/views/publish/courses/course_button_panel/_published.html.erb
+++ b/app/views/publish/courses/course_button_panel/_published.html.erb
@@ -1,15 +1,9 @@
 <span class="govuk-hint govuk-!-font-size-16" data-qa="course__last_publish_date">
-  Last published <%= l(course.last_published_at.to_date) %> at <%= course.last_published_at.strftime("%l:%M%P") %>
+  Last published on <%= l(course.last_published_at.to_datetime, format: :last_event) %>
 </span>
 
 <div class="govuk-button-group">
-  <span class="govuk-body" data-qa="course__is_findable">
-    <%= govuk_link_to "View on Find", search_ui_course_page_url(provider_code: course.provider.provider_code, course_code: course.course_code), class: "govuk-!-margin-right-2" %>
-  </span>
-  <span class="govuk-body" data-qa="course__has_vacancies">
-    <%= govuk_link_to "Change vacancies", vacancies_publish_provider_recruitment_cycle_course_path(course.provider_code, course.recruitment_cycle.year, course.course_code), class: "govuk-!-margin-right-2" %>
-  </span>
-  <span class="govuk-body" data-qa="course__withdraw-link">
-    <%= govuk_link_to "Withdraw course", withdraw_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), class: "app-link--destructive govuk-!-margin-right-2" %>
-  </span>
+  <%= govuk_link_to "View on Find", search_ui_course_page_url(provider_code: course.provider.provider_code, course_code: course.course_code), class: "govuk-!-margin-right-2", data: { qa: "course__is_findable" } %>
+  <%= govuk_link_to "Change vacancies", vacancies_publish_provider_recruitment_cycle_course_path(course.provider_code, course.recruitment_cycle.year, course.course_code), class: "govuk-!-margin-right-2", data: { qa: "course__has_vacancies" } %>
+  <%= govuk_link_to "Withdraw course", withdraw_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), class: "app-link--destructive govuk-!-margin-right-2", data: { qa: "course__withdraw-link" } %>
 </div>
