--- a/app/views/publish/courses/course_button_panel/_withdrawn.html.erb
+++ b/app/views/publish/courses/course_button_panel/_withdrawn.html.erb
@@ -1,3 +1,3 @@
 <span class="govuk-hint govuk-!-font-size-16" data-qa="course__withdrawn_date">
-  Withdrawn on <%= l(course.withdrawn_at.to_date) %> at <%= course.withdrawn_at.strftime("%l:%M%P") %>
+  Withdrawn on <%= l(course.withdrawn_at.to_datetime, format: :last_event) %>
 </span>
