[233] Remove optional from field labels

--- a/app/views/publish/courses/_description_content.html.erb
+++ b/app/views/publish/courses/_description_content.html.erb
@@ -18,7 +18,7 @@
   <% enrichment_summary(
     summary_list,
     :course,
-    "Interview process (optional)",
+    "Interview process",
     course.interview_process,
     %w[interview_process],
     action_path: "#{about_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#interview-process",
@@ -68,7 +68,7 @@
     <% enrichment_summary(
       summary_list,
       :course,
-      "Fee for international students (optional)",
+      "Fee for international students",
       number_to_currency(course.fee_international),
       %w[fee_international],
       action_path: "#{fees_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#fee-international",
@@ -78,7 +78,7 @@
     <% enrichment_summary(
       summary_list,
       :course,
-      "Fee details (optional)",
+      "Fee details",
       course.fee_details,
       %w[fee_details],
       action_path: "#{fees_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#fee-details",
@@ -151,7 +151,7 @@
   <% enrichment_summary(
     summary_list,
     :course,
-    "Personal qualities (optional)",
+    "Personal qualities",
     course.personal_qualities,
     %w[personal_qualities],
     action_path: "#{requirements_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#personal-qualities",
@@ -161,7 +161,7 @@
   <% enrichment_summary(
     summary_list,
     :course,
-    "Other requirements (optional)",
+    "Other requirements",
     course.other_requirements,
     %w[other_requirements],
     action_path: "#{requirements_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#other-requirements",
