--- a/app/views/support/providers/users/new.html.erb
+++ b/app/views/support/providers/users/new.html.erb
@@ -6,6 +6,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
       <%= form_with(model: @user_form, url: support_provider_users_path, local: true) do |f| %>
+      <%= f.govuk_error_summary %>
 
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
