--- a/app/views/publish/courses/_rolled_over_link.html.erb
+++ b/app/views/publish/courses/_rolled_over_link.html.erb
@@ -1,12 +1,16 @@
-<% if course.content_status == :draft && course.rolled_over? %>
-  <div class="govuk-inset-text app-inset-prompt govuk-!-margin-top-0">
-    <p class="govuk-body">
-      <%= govuk_link_to "View rolled over course for #{course.recruitment_cycle.next.year_range}", publish_provider_recruitment_cycle_course_path(
-            @provider.provider_code,
-            @course.recruitment_cycle_year.next,
-            @course.course_code,
-          ),
-          { class: "govuk-link--no-visited-state", data: { qa: "course__rolled-over-link" } } %>
-    </p>
+<% if course.rolled_over? %>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-inset-text app-inset-prompt govuk-!-margin-top-0">
+      <p class="govuk-body">
+        <%= govuk_link_to "View rolled over course for #{course.recruitment_cycle.next.year_range}", publish_provider_recruitment_cycle_course_path(
+              @provider.provider_code,
+              @course.recruitment_cycle_year.next,
+              @course.course_code,
+            ),
+            { class: "govuk-link--no-visited-state", data: { qa: "course__rolled-over-link" } } %>
+      </p>
+    </div>
   </div>
+</div>
 <% end %>
