--- a/app/views/publish/courses/course_button_panel/_unpublished.html.erb
+++ b/app/views/publish/courses/course_button_panel/_unpublished.html.erb
@@ -2,7 +2,7 @@
                     class: "govuk-!-margin-right-2",
                     data: { qa: "course__publish" }) %>
 
-<% if course.content_status == :draft && !course.rolled_over? %>
+<% if course.show_rollover_button? %>
   <%= govuk_button_to("Roll over course", rollover_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
                     class: " govuk-button--secondary govuk-!-margin-right-2",
                     data: { qa: "course__rollover" },
