--- a/app/views/publish/courses/details.html.erb
+++ b/app/views/publish/courses/details.html.erb
@@ -6,6 +6,7 @@
 </h1>
 
 <%= render partial: "course_button_panel" %>
+<%= render partial: "rolled_over_link" %>
 
 <div class="govuk-tabs app-tabs app-tabs--course">
   <h2 class="govuk-tabs__title">Contents</h2>
@@ -40,6 +41,10 @@
   </ul>
 
   <section class="govuk-tabs__panel" id="basic_details" role="tabpanel" aria-labelledby="basic_details_tab">
-    <%= render partial: "basic_details_tab" %>
+  <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <%= render partial: "basic_details_tab" %>
+      </div>
+    </div>
   </section>
 </div>
