[0241] Added remove user functionality

--- a/app/views/support/providers/users/show.html.erb
+++ b/app/views/support/providers/users/show.html.erb
@@ -45,5 +45,9 @@
             row.action
           end
         end %>
+
+    <p class="govuk-body">
+      <%=govuk_link_to("Remove user", delete_support_provider_user_path, class: "app-link--destructive")%>
+    </p>
   </div>
 </div>
