[315] Show correct links for unpublished courses with changes

--- a/app/views/publish/courses/_course_button_panel.erb
+++ b/app/views/publish/courses/_course_button_panel.erb
@@ -1,7 +1,5 @@
 <div data-qa="course__button_panel">
-  <% if course.has_unpublished_changes? %>
-    <%= render partial: "publish/courses/course_button_panel/unpublished" %>
-  <% elsif course.is_published? && course.is_running? %>
+  <% if (course.has_unpublished_changes?) || (course.is_published? && course.is_running?) %>
     <%= render partial: "publish/courses/course_button_panel/published" %>
   <% elsif course.is_withdrawn? %>
     <%= render partial: "publish/courses/course_button_panel/withdrawn" %>
