--- a/app/views/publish/courses/course_button_panel/_published.html.erb
+++ b/app/views/publish/courses/course_button_panel/_published.html.erb
@@ -3,7 +3,16 @@
 </span>
 
 <div class="govuk-button-group">
-  <%= govuk_link_to "View on Find", search_ui_course_page_url(provider_code: course.provider.provider_code, course_code: course.course_code), class: "govuk-!-margin-right-2", data: { qa: "course__is_findable" } %>
+  <% if course.has_unpublished_changes? %>
+    <%= govuk_button_to("Publish course", publish_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
+                        class: "govuk-!-margin-right-2",
+                        data: { qa: "course__publish" }) %>
+  <% end %>
+
+  <% unless course.has_unpublished_changes? %>
+    <%= govuk_link_to "View on Find", search_ui_course_page_url(provider_code: course.provider.provider_code, course_code: course.course_code), class: "govuk-!-margin-right-2", data: { qa: "course__is_findable" } %>
+  <% end %>
+
   <%= govuk_link_to "Change vacancies", vacancies_publish_provider_recruitment_cycle_course_path(course.provider_code, course.recruitment_cycle.year, course.course_code), class: "govuk-!-margin-right-2", data: { qa: "course__has_vacancies" } %>
   <%= govuk_link_to "Withdraw course", withdraw_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code), class: "app-link--destructive govuk-!-margin-right-2", data: { qa: "course__withdraw-link" } %>
 </div>
