update background color

--- a/app/assets/stylesheets/_inset-text.scss
+++ b/app/assets/stylesheets/_inset-text.scss
@@ -33,6 +33,6 @@
   }
 }
 
-.app-inset-prompt {
-  background-color: #f3f2f1;
+.app-inset-prompt { 
+  background-color: govuk-colour("light-grey");
 }
