--- a/app/views/support/providers/users/show.html.erb
+++ b/app/views/support/providers/users/show.html.erb
@@ -35,7 +35,7 @@
 
           component.row do |row|
             row.key { "Organisations" }
-            row.value(text: sanitize(@user.providers.map(&:provider_name).join(tag.br)), html_attributes: { id: "organisations" })
+            row.value(text: sanitize(@user.providers.in_current_cycle.pluck(:provider_name).join(tag.br)), html_attributes: { id: "organisations" })
             row.action
           end
 
