--- a/app/views/support/providers/users/check.html.erb
+++ b/app/views/support/providers/users/check.html.erb
@@ -6,58 +6,34 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <%= form_with(model: @user_form, url: check_support_provider_users_path, local: true) do |f| %>
-    <%= f.hidden_field(:email, value: @user_form.email) %>
+      <%= f.hidden_field(:email, value: @user_form.email) %>
+
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <span class="govuk-caption-l"><%= t("support.providers.users.new") %> - <%= @provider.provider_name %></span>
-          <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-3"><%= t("support.providers.users.check") %></h1>
-        </legend>
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l"> <span class="govuk-caption-l"><%= t("support.providers.users.new") %> - <%= @provider.provider_name %> </span>
+          <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-3"><%= t("support.providers.users.check") %> </h1> </legend>
 
-        <dl class="govuk-summary-list">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              <%= t("support.providers.users.first_name") %>
-            </dt>
-            <dd class="govuk-summary-list__value">
-              <%= @user_form.first_name %>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <%= govuk_link_to t("change"), new_support_provider_user_path(@provider), class: "first_name" %>
-              <span class="govuk-visually-hidden"> <%= t("support.providers.users.first_name") %></span>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              <%= t("support.providers.users.last_name") %>
-            </dt>
-            <dd class="govuk-summary-list__value">
-              <%= @user_form.last_name %>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <%= govuk_link_to t("change"), new_support_provider_user_path(@provider), class: "last_name" %>
-              <span class="govuk-visually-hidden"> <%= t("support.providers.users.last_name") %></span>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              <%= t("support.providers.users.email") %>
-            </dt>
-            <dd class="govuk-summary-list__value">
-              <%= @user_form.email %>
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <%= govuk_link_to t("change"), new_support_provider_user_path(@provider), class: "email" %>
-              <span class="govuk-visually-hidden"><%= t("support.providers.users.email") %></span>
-          </div>
-        </dl>
+    <%= render GovukComponent::SummaryListComponent.new do |component|
+          component.row do |row|
+            row.key { t("support.providers.users.first_name") }
+            row.value(text:  @user_form.first_name)
+            row.action(text: t("change"), href: new_support_provider_user_path(@provider), classes: "first_name", visually_hidden_text: t("support.providers.users.first_name"))
+          end
 
-        <div class="govuk-warning-text">
-          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-          <strong class="govuk-warning-text__text">
-            <span class="govuk-warning-text__assistive">Warning</span>
-            The user will be sent an email to tell them you’ve added them to <%= @provider.provider_name %>.
-          </strong>
-        </div>
+          component.row do |row|
+            row.key { t("support.providers.users.last_name") }
+            row.value(text: @user_form.last_name)
+            row.action(text: t("change"), href: new_support_provider_user_path(@provider), classes: "last_name", visually_hidden_text: t("support.providers.users.last_name"))
+          end
+
+          component.row do |row|
+            row.key { t("support.providers.users.email") }
+            row.value(text: @user_form.email)
+            row.action(text: t("change"), href: new_support_provider_user_path(@provider), classes: "email", visually_hidden_text: t("support.providers.users.email"))
+          end
+        end %>
+
+        <div class="govuk-warning-text"> <span class="govuk-warning-text__icon" aria-hidden="true">!</span> <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">Warning</span> The user will be sent an email to tell them you’ve added them to <%= @provider.provider_name %>. </strong> </div>
 
         <%= f.govuk_submit(t("support.providers.users.new")) %>
       </fieldset>
