[0241] Added specs for remove user functionality

--- a/app/views/support/providers/users/delete.html.erb
+++ b/app/views/support/providers/users/delete.html.erb
@@ -25,7 +25,7 @@
     <%= govuk_button_to "Remove user",
         delete_support_provider_user_path(@provider, @user),
         method: :delete,
-        class: "govuk-button govuk-button--warning" %>
+        class: "govuk-button--warning" %>
 
     <p class="govuk-body">
       <%= govuk_link_to("Cancel", support_provider_user_path(@provider, @user)) %>
